# match-aggregation

./: match-aggretation.cabal  test-data.csv
app/: Main.hs  Match.hs  ProductResult.hs
test/: Spec.hs
